--- a/client/src/LeftSide.css
+++ b/client/src/LeftSide.css
@@ -3,8 +3,8 @@
 }
 
 .leftButton.active {
-    background-color: #0390f5!important;
-    border-color: #0390f5!important;
+    background-color: #0d6efd!important;
+    border-color: #0d6efd!important;
 }
 
   .below-nav {
